--- a/deneme/index.html
+++ b/deneme/index.html
@@ -15,7 +15,7 @@
         <input id="deleteC" type="button" value="C">
         <input id="deleteB" type="button" value="<">
         <input class="num" type="button" value="7">
-        <input class="num" type="button" value="8">ekeryumeker
+        <input class="num" type="button" value="8">
         <input class="num" type="button" value="9">
         <input class="operator" type="button" value="/"><br>
         <input class="num" type="button" value="4">
